[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pktmon-interface"
version = "0.1.0"
description = "Generic Python interface for Windows pktmon packet capture."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "pktmon-interface contributors" }]
license = { text = "Proprietary or project-defined; add a LICENSE before publishing." }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
pktmon-interface = "pktmon_interface.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
