[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pktmon-interface"
version = "0.2.0"
description = "Generic Python interface for Windows pktmon packet capture."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "pktmon-interface contributors" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["pktmon", "packet-capture", "windows", "networking"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
pktmon-interface = "pktmon_interface.cli:main"

[project.urls]
Homepage = "https://github.com/1bananachicken/python-pktmon-interface"
Repository = "https://github.com/1bananachicken/python-pktmon-interface"
Issues = "https://github.com/1bananachicken/python-pktmon-interface/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pktmon_interface = ["*.dll"]

[tool.pytest.ini_options]
testpaths = ["tests"]
